Fixed scroll issue on small screens

--- a/index.css
+++ b/index.css
@@ -255,7 +255,7 @@
 }
 
 .ryanshy-id-name-col {
-    width: auto;
+    width: 20%;
 }
 
 .ryanshy-date-col {
